--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,3 +2,9 @@ spring.application.name:
   forestworld-blog
 server:
   port: 7002
+spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://101.200.158.94:9740/forestblog
+    username: beiyouge
+    password: AaZz123456
