--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ server:
       charset: UTF-8
       enabled: true
       force: true
+
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -30,3 +31,5 @@ springdoc:
     enabled: true
     path: /swagger-ui.html
 
+mybatis-plus:
+  mapper-locations: classpath*:/dao/**/*.xml
