revise publish function and complete update function.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,6 +33,8 @@ springdoc:
 
 mybatis-plus:
   mapper-locations: classpath*:/dao/**/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 
 sa-token:
